--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/listam
 spring.datasource.username=root
 spring.datasource.password=root
+listam.upload.image.path = C:\\Users\\Smart\\IdeaProjects\\list.am\\images\\
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=100MB
